--- a/src/Contact.css
+++ b/src/Contact.css
@@ -23,6 +23,7 @@ input {
   border-radius: 5px;
   padding-top: 5px;
   border: 2px solid #ae445a;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 textarea {
@@ -31,6 +32,7 @@ textarea {
   border-radius: 5px;
   border: 2px solid #ae445a;
   margin-bottom: 10px;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 label {
