--- a/src/Contact.css
+++ b/src/Contact.css
@@ -24,6 +24,7 @@ input {
   padding-top: 5px;
   border: 2px solid #ae445a;
   background-color: rgba(255, 255, 255, 0);
+  color: grey;
 }
 
 textarea {
